feat: Introduce master sheet URL and update icons
Adds a new `masterSheetUrl` to `AppSettings` to manage a primary data source, distinct from the read-only `sheetDbUrl`. Updates application icons to use SVG for better scalability and compatibility. Refactors data synchronization logic to handle different data sources and improve error handling. Includes minor UI and state management adjustments in related components.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Expenses" />
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2382/2382533.png" />
+    
+    <!-- New Icon Links -->
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="apple-touch-icon" href="/icon.svg" />
 
     <!-- Tailwind CSS (CDN kept for simplicity in this setup) -->
     <script src="https://cdn.tailwindcss.com"></script>
